--- a/package.json
+++ b/package.json
@@ -10,24 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
-    "@gradio/client": "^1.5.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "axios": "^1.7.6",
-    "chart.js": "^4.4.4",
-
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@gradio/client": "^1.5.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.5",
-
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.2.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
